04-22-2000:
Fixed a bug with the day of the week that was shifted by one. Please report
if it broke something.
-- Frank Denis

04-20-2000:
Fixed the path to svgablink.
The datalink 150 S protocol was implemented but the "-150s" option was
rejected in setwatch. Fixed.
-- Frank Denis

04-17-2000:
Add support for Datalink 150 S watches
-- Frank Denis


04-14-2000:
Lots, lots, lots of cleanups to the source code in order to make it compile
on modern compilers.
-- Frank Denis


01-05-2000:
Added a patch from Scottie Shore <sshore@escape.ca> for a Y2K problem.
As localtime(3) reads,
       tm_year
              The number of years since 1900.
The watch is expecting the last two digits and displays A0 for the year instead of 00.  Fix is to take the year % 100.
-- David Fries


12-11-1999:
Added a patch from Danilo Fiorenzano <danilo@telusplanet.net> to
Added new function "maxPriority()" to switch to SCHED_RR kernel scheduling
policy at maximum priority and lock all pages into real memory, in order
to improve timing accuracy.
-- David Fries